# Arp

./: .gitignore  .gitmodules  LICENSE  README.md
Arp/: .gitignore  Arp.sln  CMakeLists.txt  main.c
Arp/Arp/: Arp.csproj  Program.cs
Arp/Arp-Interpreter/: Arp-Interpreter.vcxproj  Arp-Interpreter.vcxproj.filters  Main.c  TokenRegex.c  TokenRegex.h
Arp/Arp-Language/: Arp-Language.c  Arp-Language.h  Arp-Language.vcxproj  Arp-Language.vcxproj.filters  KeyWords.c  KeyWords.h  pch.h
Arp/Arp-interpreter/: CMakeLists.txt  library.c  library.h
Arp/Arp-language/: CMakeLists.txt  TokenRegex.h  Type.h  library.c  library.h
Arp/Arp.Interpreter/: Arp.Interpreter.csproj  CharValidator.cs  Interpreter.cs  Program.cs  TokenMatcher.cs
Arp/Arp.Interpreter/Properties/: AssemblyInfo.cs
Arp/Arp.Language/: Arp.Language.csproj  KeywordManager.cs  Keywords.cs  Token.cs
Arp/Arp.Language/Properties/: AssemblyInfo.cs
Arp/TestFiles/: conditionals-and-loops.arp  functions.arp  variables.arp
Arp/test/: functions.arp  main.arp
Cdim-interpreter/: CMakeLists.txt
